environments/dev/kube-system/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: k3s-server
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.1.1.36
  ports:
  - name: https
    port: 8443
    protocol: TCP
