environments/dev/kube-system/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k3s-server
  namespace: kube-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  clusterIP: None
  type: ClusterIP
