environments/dev/kube-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-server
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: k8s.dev.dorf.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k3s-server
            port:
              name: https
  tls:
    - secretName: k8s-ingress-cert
      hosts:
      - k8s.dev.dorf.world
